[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xrea-api"
version = "0.1.0"
description = "Python wrapper for XREA / Coreserver API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
]
keywords = ["xrea", "coreserver", "api", "hosting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/yourname/xrea-api"
Documentation = "https://apidoc.xrea.com/"
Issues = "https://github.com/yourname/xrea-api/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/xrea_api"]
